--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ python-json-logger
 zstandard
 redis
 rq
-middle-auth-client==2.4.3
+-e git+https://github.com/seung-lab/middle-auth-client.git@table_mapping#egg=middle_auth_client
 -e git+https://github.com/ZettaAI/zmesh.git@nkem-float-res#egg=zmesh
 fastremap
 pyyaml
